@@ -4,6 +4,8 @@ Copyright (C) 2012-2014 Bertrand Chenal.
 Copyright (C) 2012-2020 B2CK SPRL.
 Copyright (C) 2019 Jitbit.
 Copyright (C) 2013 Thomas Park
+Copyright (C) 2020 Maxime Richez
+Copyright (C) 2020 SALUC SA
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
